// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TAG COMPONENT > should render 1`] = `
<DocumentFragment>
  <a
    href="tagLink"
  >
    <div
      class="_tag_f57044 _tag-common_f57044"
    >
      tagName
    </div>
  </a>
</DocumentFragment>
`;

exports[`TAGSET COMPONENT > should render 1`] = `
<DocumentFragment>
  <div
    class="undefined _tagSet_f57044"
  >
    <a
      href="tagLink"
    >
      <div
        class="_tag_f57044 _tag-common_f57044"
      >
        tagName
      </div>
    </a>
  </div>
</DocumentFragment>
`;
